# zcloak-node

./: .gitignore  Cargo.toml  README.md  customSpec.json  customSpecRaw.json  types.json
frame/zcloak-support/: Cargo.toml
frame/zcloak-support/src/: currency.rs  lib.rs  traits.rs
frame/zcloak-support/src/traits/: tokens.rs
frame/zcloak-support/src/traits/tokens/: currency.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/class-register/: Cargo.toml
pallets/class-register/src/: lib.rs
pallets/crowdfunding/: Cargo.toml
pallets/crowdfunding/src/: lib.rs  mock.rs  tests.rs
pallets/regulated-balances/: Cargo.toml
pallets/regulated-balances/src/: lib.rs  mock.rs
pallets/stark-verifier-v2/: Cargo.toml  proof.txt
pallets/stark-verifier-v2/src/: lib.rs  mock.rs
pallets/starks-balances/: Cargo.toml
pallets/starks-balances/src/: lib.rs  mock.rs  tests.rs
pallets/starks-register/: Cargo.toml
pallets/starks-register/src/: lib.rs
pallets/starks-verifier/: Cargo.toml  proof.txt
pallets/starks-verifier-seperate/: Cargo.toml
pallets/starks-verifier-seperate/src/: lib.rs
pallets/starks-verifier-user/: Cargo.toml  proof.proof
pallets/starks-verifier-user/src/: lib.rs
pallets/starks-verifier/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/validator-set/: Cargo.toml
pallets/validator-set/src/: lib.rs
primitives/catalog/: Cargo.toml
primitives/catalog/src/: inspect.rs  lib.rs  regist.rs  types.rs
primitives/starks/: Cargo.toml  out.rs
primitives/starks/src/: lib.rs
primitives/starksVM/: Cargo.toml
primitives/starksVM/benches/: fft.rs  field.rs  hash.rs  polynom.rs
primitives/starksVM/src/: lib.rs
primitives/starksVM/src/crypto/: hash.rs  merkle.rs
primitives/starksVM/src/examples/: fibonacci.rs  mod.rs  stacktest.rs  testrange.rs  utils.rs
primitives/starksVM/src/math/: fft.rs  field.rs  parallel.rs  polynom.rs  quartic.rs
primitives/starksVM/src/processor/: mod.rs  opcodes.rs
primitives/starksVM/src/processor/decoder/: mod.rs  tests.rs
primitives/starksVM/src/processor/stack/: mod.rs
primitives/starksVM/src/processor/stack/tests/: comparisons.rs  conditional.rs  mod.rs
primitives/starksVM/src/programs/: hashing.rs  inputs.rs  mod.rs
primitives/starksVM/src/programs/assembly/: errors.rs  mod.rs  parsers.rs  tests.rs
primitives/starksVM/src/programs/blocks/: mod.rs  tests.rs
primitives/starksVM/src/programs/tests/: mod.rs  utils.rs
primitives/starksVM/src/stark/: options.rs  proof.rs  prover.rs  verifier.rs
primitives/starksVM/src/stark/constraints/: constraint_poly.rs  constraint_table.rs  evaluator.rs  utils.rs
primitives/starksVM/src/stark/constraints/decoder/: flow_ops.rs  mod.rs  op_bits.rs  sponge.rs  tests.rs
primitives/starksVM/src/stark/constraints/stack/: arithmetic.rs  comparison.rs  conditional.rs  hash.rs  input.rs  manipulation.rs  mod.rs
primitives/starksVM/src/stark/fri/: mod.rs  prover.rs  utils.rs  verifier.rs
primitives/starksVM/src/stark/trace/: trace_state.rs  trace_table.rs
primitives/starksVM/src/stark/utils/: coefficients.rs  mod.rs  proof_of_work.rs
primitives/starksVM/src/utils/: hasher.rs  mod.rs  sponge.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
