[package]
authors = ['zCloak Network']
build = 'build.rs'
description = 'zCloak network verifier node'
edition = '2018'
homepage = 'https://zcloak.network'
license = 'Unlicense'
name = 'zcloak-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.1'

[[bin]]
name = 'zcloak-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# local dependencies
zcloak-runtime = { path = '../runtime' }
sp-starks = { path = "../primitives/starks"}

# Substrate dependencies
sc-cli = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2", features = ["wasmtime"] }
sp-core = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sc-executor = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2", features = ["wasmtime"] }
sc-service = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-keystore = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-inherents = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-transaction-pool = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-transaction-pool-api = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-consensus-aura = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-consensus-aura = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-consensus = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-consensus = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-finality-grandpa = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-finality-grandpa = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-client-api = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-runtime = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-timestamp = {git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
# These dependencies are used for the node template's RPC
sc-rpc = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-api = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-rpc-api = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-blockchain = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sp-block-builder = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
sc-basic-authorship = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
substrate-frame-rpc-system = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
pallet-transaction-payment-rpc = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}
frame-benchmarking-cli = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2"}


[features]
default = []
runtime-benchmarks = ['zcloak-runtime/runtime-benchmarks']
