[package]
authors = ['zCloak Network']
build = 'build.rs'
description = 'zCloak network verifier node'
edition = '2018'
homepage = 'https://zcloak.network'
license = 'Unlicense'
name = 'zcloak-node'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.1'

[[bin]]
name = 'zcloak-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/zCloak-Network/substrate"}

[dependencies]
jsonrpc-core = "18.0.0"
structopt = '0.3.8'

# local dependencies
zcloak-runtime = { path = '../runtime' }
sp-starks = { path = "../primitives/starks"}

# Substrate dependencies
sc-cli = { git = "https://github.com/zCloak-Network/substrate", features = ["wasmtime"] }
sp-core = { git = "https://github.com/zCloak-Network/substrate" }
sc-executor = { git = "https://github.com/zCloak-Network/substrate", features = ["wasmtime"] }
sc-service = { git = "https://github.com/zCloak-Network/substrate", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/zCloak-Network/substrate"}
sc-keystore = { git = "https://github.com/zCloak-Network/substrate"}
sp-inherents = { git = "https://github.com/zCloak-Network/substrate"}
sc-transaction-pool = { git = "https://github.com/zCloak-Network/substrate"}
sc-transaction-pool-api = { git = "https://github.com/zCloak-Network/substrate"}
sc-consensus-aura = { git = "https://github.com/zCloak-Network/substrate"}
sp-consensus-aura = { git = "https://github.com/zCloak-Network/substrate"}
sp-consensus = { git = "https://github.com/zCloak-Network/substrate"}
sc-consensus = { git = "https://github.com/zCloak-Network/substrate"}
sc-finality-grandpa = { git = "https://github.com/zCloak-Network/substrate"}
sp-finality-grandpa = { git = "https://github.com/zCloak-Network/substrate"}
sc-client-api = { git = "https://github.com/zCloak-Network/substrate"}
sp-runtime = { git = "https://github.com/zCloak-Network/substrate"}
sp-timestamp = {git = "https://github.com/zCloak-Network/substrate"}
# These dependencies are used for the node template's RPC
sc-rpc = { git = "https://github.com/zCloak-Network/substrate"}
sp-api = { git = "https://github.com/zCloak-Network/substrate"}
sc-rpc-api = { git = "https://github.com/zCloak-Network/substrate"}
sp-blockchain = { git = "https://github.com/zCloak-Network/substrate"}
sp-block-builder = { git = "https://github.com/zCloak-Network/substrate"}
sc-basic-authorship = { git = "https://github.com/zCloak-Network/substrate"}
substrate-frame-rpc-system = { git = "https://github.com/zCloak-Network/substrate"}
pallet-transaction-payment-rpc = { git = "https://github.com/zCloak-Network/substrate"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/zCloak-Network/substrate"}
frame-benchmarking-cli = { git = "https://github.com/zCloak-Network/substrate"}


[features]
default = []
runtime-benchmarks = ['zcloak-runtime/runtime-benchmarks']
