[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/Starks-Network/starks-node/'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '3.0.0'

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# local dependencies
pallet-starks-verifier = { path = '../pallets/starks-verifier', default-features = false }

# runtime 
frame-benchmarking = { default-features = false, git = "https://github.com/Starks-Network/substrate", optional = true }
frame-executive = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
frame-support = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
frame-system = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/Starks-Network/substrate", optional = true }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-api = { default-features = false, git = "https://github.com/Starks-Network/substrate" }

# primitives 
sp-block-builder = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-consensus-aura = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-core = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-offchain = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-session = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-std = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
sp-version = { default-features = false, git = "https://github.com/Starks-Network/substrate" }

# pallets
pallet-aura = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-balances = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-grandpa = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-sudo = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/Starks-Network/substrate" }
#pallet-starks-verifier = { default-features = false, path = "../pallets/starks-verifier" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-starks-verifier/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
