[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'zcloak-runtime'
repository = 'https://github.com/zCloak-Network/starks-node/'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
log = { version = "0.4.14", default-features = false }

# local dependencies
pallet-starks-verifier = { path = '../pallets/starks-verifier', default-features = false }
pallet-validator-set = { path = '../pallets/validator-set', default-features = false }

# runtime 
frame-benchmarking = { default-features = false, git = "https://github.com/zCloak-Network/substrate", optional = true }
frame-executive = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-support = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-system = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/zCloak-Network/substrate", optional = true }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }

# primitives 
sp-api = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-block-builder = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-consensus-aura = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-core = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-offchain = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-session = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-std = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-version = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }

# pallets
pallet-aura = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-balances = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-grandpa = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-sudo = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-session = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'log/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-starks-verifier/std',
    'pallet-validator-set/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    # primitives
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
