[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'zcloak-runtime'
repository = 'https://github.com/zCloak-Network/starks-node/'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
log = { version = "0.4.14", default-features = false }

# local dependencies
pallet-starks-verifier = { path = '../pallets/starks-verifier', default-features = false }
pallet-validator-set = { path = '../pallets/validator-set', default-features = false }
pallet-starks-verifier-user = { path = '../pallets/starks-verifier-user', default-features = false }
pallet-starks-verifier-seperate = { path = '../pallets/starks-verifier-seperate', default-features = false }
pallet-starks-balances = { path = '../pallets/starks-balances', default-features = false }
pallet-crowdfunding = { path = '../pallets/crowdfunding', default-features = false }
# runtime 
frame-benchmarking = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2", optional = true }
frame-executive = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-support = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-system = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2", optional = true }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }

# primitives 
sp-api = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-block-builder = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-consensus-aura = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-core = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-inherents = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-offchain = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-session = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-std = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-transaction-pool = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-version = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }

# pallets
pallet-aura = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-balances = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-grandpa = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-sudo = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-timestamp = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-session = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }

pallet-assets = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
# node-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.5" }
zcloak-support = {path = "../frame/zcloak-support", default-features = false}


[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-assets/runtime-benchmarks',

]
std = [
    'codec/std',
    'serde',
    'log/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-starks-verifier/std',
    'pallet-starks-verifier-user/std',
    'pallet-starks-verifier-seperate/std',
    'pallet-validator-set/std',
    "pallet-crowdfunding/std",
    "pallet-starks-balances/std",
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
	"pallet-assets/std",

    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    "zcloak-support/std",
]
