[package]
name = "zcloak-support"
description = "Shared traits including `Regulated` and more."
version = "0.1.0"
authors = ["Dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"


[dependencies]

serde = { version = "1.0.101", optional = true }
# serde_json = {version = "1.0"}
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-runtime = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-io = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-std = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
num-traits = { version = "0.2.14", default-features = false }
frame-support = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-system =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-inherents = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-starks-verifier = { path = '../../pallets/starks-verifier', default-features = false }
pallet-assets = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-balances = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
log = { version = "0.4.0"}

[features]
default = ["std"]
std = [
    "serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"log/std",
	"num-traits/std",
	"frame-support/std",
    "frame-system/std",
	"sp-inherents/std",
	"pallet-starks-verifier/std",
    "pallet-assets/std",
    "pallet-balances/std",
]