[package]
name = "pallet-starks-balances"
version = "0.1.0"
authors = ["Dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hex = "0.4.2"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-support =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-core =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-io =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }

frame-system =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-runtime =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-staking = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-session = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }

sp-application-crypto = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
log = {version = "0.4.0"}
pallet-starks-verifier = { path = '../starks-verifier', default-features = false }
pallet-assets = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-balances = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
zcloak-support = {path = "../../frame/zcloak-support", default-features = false}

[features]
default = ["std"]
std = [
    # "hex/std",
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
    "sp-application-crypto/std",
    "log/std",
    "pallet-starks-verifier/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "log/std",
    "zcloak-support/std",

]