[package]
name = "pallet-starks-register"
version = "0.1.0"
authors = ["Dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-support =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-core =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-io =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-system =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-runtime =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-application-crypto = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
log = {version = "0.4.0"}
pallet-starks-verifier = { path = '../starks-verifier', default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-application-crypto/std",
    "log/std",
    "pallet-starks-verifier/std",
    "log/std",
]