[package]
name = "pallet-starks-verifier-user"
version = "0.1.0"
authors = ["Dejavukong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-core =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-io =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-application-crypto = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-support =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
frame-system =  { default-features = false, git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-keystore = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2", optional = true }
log = { version = "0.4.14", default-features = false }
# starks
sp-starks = { path = "../../primitives/starks", default-features = false }

[dev-dependencies]
pallet-session = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
sp-staking = { git = "https://github.com/zCloak-Network/substrate", branch = "polkadot-v0.9.2" }
pallet-validator-set = { path = "../validator-set"}

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-starks/std",
    "sp-keystore",
    "log/std",
]
