[package]
name = "pallet-starks-verifier"
version = "0.1.0"
authors = ["Dejavukong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-core =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-io =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-application-crypto = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-support =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-system =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-keystore = { git = "https://github.com/zCloak-Network/substrate", optional = true }
log = { version = "0.4.14", default-features = false }
# starks
sp-starks = { path = "../../primitives/starks", default-features = false }

[dev-dependencies]
pallet-session = { git = "https://github.com/zCloak-Network/substrate" }
sp-staking = { git = "https://github.com/zCloak-Network/substrate" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
    "sp-application-crypto/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "sp-starks/std",
    "sp-keystore",
    "log/std",
]
