[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
