[package]
name = "pallet-validator-set"
version = "0.1.0"
authors = ["Dejavukong <foxcong.yolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-support =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
frame-system =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-runtime =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
sp-staking = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }
pallet-session = { default-features = false, git = "https://github.com/zCloak-Network/substrate" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
]