[package]
name = "primitives-catalog"
version = "0.1.0"
authors = ["zCloak Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std =  { default-features = false, git = "https://github.com/zCloak-Network/substrate" }



[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
]