[package]
name = "sp-starks"
version = "0.1.0"
authors = ["suvi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.1", optional = true }
distaff = { git = "https://github.com/GuildOfWeavers/distaff", optional = true }
sp-runtime-interface = { git = "https://github.com/zCloak-Network/substrate", default-features = false }

[features]
default = ["std"]
std = [
    "bincode",
    "distaff",
    "sp-runtime-interface/std",
]
